tests/should-fail/semantics/wrong-type-for-array-index-2.j
globals
	integer array foo
	integer bla = foo[3.1]
endglobals
